--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,9 +11,9 @@ import type { MetaSEO } from '@/metaseo';
 
 type Props = {
 	meta?: MetaSEO;
-}
+};
 
-const { meta = {} } = Astro.props as Props;
+const { meta } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
