--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -1,10 +1,9 @@
 ---
 import { AstroSeo } from '@astrolib/seo';
 import { GoogleAnalytics } from '@astrolib/analytics';
-import { getImage } from '@astrojs/image';
 
 import { SITE } from '@/config.mjs';
-import { MetaSEO } from '@/metaseo';
+import type { MetaSEO } from '@/metaseo';
 
 import Fonts from '@atoms/Fonts.astro';
 
@@ -12,22 +11,12 @@ export interface Props extends MetaSEO {
 	dontUseTitleTemplate?: boolean;
 }
 
-// const defaultImage = SITE.defaultImage
-// 	? (
-// 			await getImage({
-// 				src: SITE.defaultImage,
-// 				width: 1200,
-// 				height: 628
-// 			})
-// 	  ).src
-// 	: '';
-
 const {
 	title = SITE.name,
 	description = SITE.description,
-	image: _image = defaultImage,
+	image = SITE.defaultImage,
+
 	canonical,
-	noindex = false,
 
 	nofollow = false,
 
@@ -50,15 +39,12 @@ const {
 		title: ogTitle,
 		description: description,
 		type: ogType,
-		// images: image
-		// 	? [
-		// 			{
-		// 				url: image,
-		// 				alt: ogTitle,
-		// 			},
-		// 	  ]
-		// 	: undefined,
-		// site_name: 'SiteName',
+		images: image ? [
+			{
+				url: image,
+				alt: ogTitle,
+			}
+		] : undefined
 	}}
 />
 
