--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -21,7 +21,7 @@ const { ...props } = Astro.props as Props;
 	<section class="flex my-8">
 		<div class="w-full flex">
 			<div class="w-full h-auto bg-sw-coal hidden lg:block lg:w-2/5 rounded-l-2xl overflow-hidden">
-				<img class="w-full h-full contain" src="images/cosmonaut_suit.png" alt="" />
+				<img class="w-full h-full contain" src="/images/cosmonaut_suit.wepb" alt="" />
 			</div>
 			<div
 				class="flex items-center content-center w-full p-4 lg:p-8 rounded-2xl lg:rounded-l-none shadow-md bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800"
