--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -5,8 +5,8 @@ import HeroCanvas from '@atoms/HeroCanvas';
 
 <section class="relative">
 	<DividerWave class="spacewiz__fill--reversed bottom-0" />
-	<img class="block md:hidden w-screen cover aspect-ratio-16/9" src="/images/hero_sm.png" alt="" />
-	<img class="hidden md:block w-screen cover aspect-ratio-16/9" src="/images/hero_md.png" alt="" />
+	<img class="block md:hidden w-screen cover aspect-ratio-16/9" src="/images/hero_sm.wepb" alt="" />
+	<img class="hidden md:block w-screen cover aspect-ratio-16/9" src="/images/hero_md.wepb" alt="" />
 
 	<!-- <figure class="absolute top-0 right-0 w-full h-full"> -->
 	<!-- <HeroCanvas client:load/> -->
