--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -30,7 +30,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
 				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ/',
 			}}
-			photo="/images/team/alex_profile.png"
+			photo="/images/team/alex_profile.webp"
 		/>
 
 		<TeamCard
@@ -41,7 +41,7 @@ const { ...props } = Astro.props as Props;
 			links={{
 				linkedin: 'https://www.linkedin.com/in/danilo-nobre/',
 			}}
-			photo="/images/team/danilo_profile.png"
+			photo="/images/team/danilo_profile.webp"
 		/>
 
 		<TeamCard
@@ -53,7 +53,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/gustav-arantes/',
 				portfolio: 'https://gustavarantes.myportfolio.com/',
 			}}
-			photo="/images/team/gustavo_profile.png"
+			photo="/images/team/gustavo_profile.webp"
 		/>
 
 		<TeamCard
@@ -64,7 +64,7 @@ const { ...props } = Astro.props as Props;
 			links={{
 				linkedin: 'https://www.linkedin.com/in/rhayane-miranda/',
 			}}
-			photo="/images/team/rhayane_profile.png"
+			photo="/images/team/rhayane_profile.webp"
 		/>
 
 		<TeamCard
@@ -76,7 +76,7 @@ const { ...props } = Astro.props as Props;
 				github: 'https://github.com/wbmagalhaes/',
 				linkedin: 'https://www.linkedin.com/in/william-bernardes-magalhaes/',
 			}}
-			photo="/images/team/william_profile.png"
+			photo="/images/team/william_profile.webp"
 		/>
 	</section>
 </div>
