--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -3,7 +3,7 @@ import { AstroSeo } from '@astrolib/seo';
 import { GoogleAnalytics } from '@astrolib/analytics';
 
 import { SITE } from '@/config.mjs';
-import type { MetaSEO } from '@/metaseo';
+import type { MetaSEO } from '@types/metaseo';
 
 import Fonts from '@atoms/Fonts.astro';
 
