--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -3,7 +3,7 @@ import Layout from '@layouts/BaseLayout.astro';
 import Hero from '@widgets/Hero.astro';
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
 
-import type { MetaSEO } from '@/metaseo';
+import type { MetaSEO } from '@types/metaseo';
 
 type Props = {
 	meta?: MetaSEO;
