--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Team from '@widgets/Team.astro';
 import DividerRect from '@atoms/dividers/DividerRect.astro';
 
 import { SITE } from '@/config.mjs';
-import type { MetaSEO } from '@/metaseo';
+import type { MetaSEO } from '@types/metaseo';
 
 const meta: MetaSEO = {
 	title: SITE.title,
