--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ import Header from '@widgets/Header.astro';
 import Footer from '@widgets/Footer.astro';
 import Scripts from '@core/Scripts.astro';
 
-import type { MetaSEO } from '@/metaseo';
+import type { MetaSEO } from '@types/metaseo';
 
 type Props = {
 	meta?: MetaSEO;
