--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -1,9 +1,6 @@
 ---
 import { Icon } from 'astro-icon';
 
-import { Image } from '@astrojs/image/components';
-import contactImage from '@images/cosmonaut_suit.png';
-
 export interface Props {
 	[props: string]: any;
 }
@@ -24,7 +21,7 @@ const { ...props } = Astro.props as Props;
 	<section class="flex my-8">
 		<div class="w-full flex">
 			<div class="w-full h-auto bg-sw-coal hidden lg:block lg:w-2/5 rounded-l-2xl overflow-hidden">
-				<Image class="w-full h-full" fit="contain" format="webp" src={contactImage} alt="" />
+				<img class="w-full h-full contain" src="/images/cosmonaut_suit.webp" alt="" />
 			</div>
 			<div
 				class="flex items-center content-center w-full p-4 lg:p-8 rounded-2xl lg:rounded-l-none shadow-md bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800"
@@ -58,7 +55,11 @@ const { ...props } = Astro.props as Props;
 
 						<div class="flex flex-col justify-center">
 							<h4 class="spacewiz__text--accent hidden md:block">Telefone</h4>
-							<p>Envie uma mensagem por <a href="https://wa.me/5561993527377">WhatsApp</a> ou <a href="https://t.me/dankonobre">Telegram</a>.</p>
+							<p>
+								Envie uma mensagem por <a href="https://wa.me/5561993527377">WhatsApp</a> ou <a
+									href="https://t.me/dankonobre">Telegram</a
+								>.
+							</p>
 						</div>
 					</div>
 
@@ -72,7 +73,10 @@ const { ...props } = Astro.props as Props;
 
 						<div class="flex flex-col justify-center">
 							<h4 class="spacewiz__text--accent hidden md:block">Redes Sociais</h4>
-							<p>Faça parte do nosso <a href="https://discord.com/invite/4rAZ8HhuAh">Dscord</a> e nos siga no <a href="https://www.instagram.com/spacewiz.dev/">Instagram</a>.</p>
+							<p>
+								Faça parte do nosso <a href="https://discord.com/invite/4rAZ8HhuAh">Discord</a> e nos siga
+								no <a href="https://www.instagram.com/spacewiz.dev/">Instagram</a>.
+							</p>
 						</div>
 					</div>
 				</div>
