--- a/src/components/widgets/projects/ProjectHero.astro
+++ b/src/components/widgets/projects/ProjectHero.astro
@@ -1,6 +1,4 @@
 ---
-import { Image } from '@astrojs/image/components';
-
 type Props = {
 	src: string;
 };
@@ -9,13 +7,5 @@ const { src } = Astro.props as Props;
 ---
 
 <figure class="h-full w-full">
-	<Image
-		src={import(/* @vite-ignore */ `../../../assets/images/projects/${src}.png`)}
-		class="w-full"
-		fit="cover"
-		aspectRatio="16/9"
-		width="1200"
-		format="webp"
-		alt=""
-	/>
+	<img src={src} class="w-full aspect-ratio-16/9 cover" width="1200" alt="" />
 </figure>
