--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -8,7 +8,7 @@ import type { ImageProps } from '@widgets/projects/ProjectCarousel.astro';
 import type { PartnersProps } from '@widgets/projects/ProjectPartners.astro';
 
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
-import type { MetaSEO } from '@types/metaseo';
+import type { MetaSEO } from 'types/metaseo';
 
 type Props = {
 	meta?: MetaSEO;
