--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/ProjectLayout.astro';
 import { getSlugFromURL } from '@core/Path';
-import type { MetaSEO } from '@types/metaseo';
+import type { MetaSEO } from 'types/metaseo';
 
 export async function getStaticPaths() {
 	const all = await Astro.glob('../../data/projects/**/*.mdx');
