--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -3,7 +3,7 @@ import Layout from '@layouts/PageLayout.astro';
 import { getSlugFromURL } from '@core/Path';
 
 import { SITE } from '@/config.mjs';
-import type { MetaSEO } from '@types/metaseo';
+import type { MetaSEO } from 'types/metaseo';
 
 async function getProjects() {
 	const all = await Astro.glob('../../data/projects/**/*.mdx');
