--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -38,12 +38,14 @@ const {
 		title: ogTitle,
 		description: description,
 		type: ogType,
-		images: image ? [
-			{
-				url: image,
-				alt: ogTitle,
-			}
-		] : undefined
+		images: image
+			? [
+					{
+						url: image,
+						alt: ogTitle,
+					},
+			  ]
+			: undefined,
 	}}
 />
 
@@ -52,3 +54,17 @@ const {
 
 <!-- Google Analytics -->
 <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />
+
+<!-- Google Tag Manager -->
+<script type="text/partytown">
+	(function (w, d, s, l, i) {
+		w[l] = w[l] || [];
+		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+		var f = d.getElementsByTagName(s)[0],
+			j = d.createElement(s),
+			dl = l != 'dataLayer' ? '&l=' + l : '';
+		j.async = true;
+		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+		f.parentNode.insertBefore(j, f);
+	})(window, document, 'script', 'dataLayer', SITE.googleTagId);
+</script>
