--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -53,18 +53,4 @@ const {
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
 <!-- Google Analytics -->
-<GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />
-
-<!-- Google Tag Manager -->
-<script type="text/partytown">
-	(function (w, d, s, l, i) {
-		w[l] = w[l] || [];
-		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-		var f = d.getElementsByTagName(s)[0],
-			j = d.createElement(s),
-			dl = l != 'dataLayer' ? '&l=' + l : '';
-		j.async = true;
-		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-		f.parentNode.insertBefore(j, f);
-	})(window, document, 'script', 'dataLayer', SITE.googleTagId);
-</script>
+<GoogleAnalytics id={String(SITE.googleTagId)} partytown={true} />
