--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const { meta } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
-<html lang="ptbr" class="motion-safe:scroll-smooth 2xl:text-5">
+<html lang="pt" class="motion-safe:scroll-smooth 2xl:text-5">
 	<head>
 		<MetaTags {...meta} />
 	</head>
