--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -1,6 +1,6 @@
 ---
 import { AstroSeo } from '@astrolib/seo';
-import { GoogleAnalytics } from '@astrolib/analytics';
+import { analytics, GAPageView, GAEvent } from '@core/Firebase';
 
 import { SITE } from '@/config.mjs';
 
@@ -52,19 +52,4 @@ const {
 <!-- Google Site Verification -->
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
-<!-- Google Analytics -->
-<GoogleAnalytics id={String(SITE.googleAnalyticsStreamId)} partytown={true} />
-
-<!-- Google Tag Manager -->
-<!-- <script type="text/partytown">
-	(function (w, d, s, l, i) {
-		w[l] = w[l] || [];
-		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-		var f = d.getElementsByTagName(s)[0],
-			j = d.createElement(s),
-			dl = l != 'dataLayer' ? '&l=' + l : '';
-		j.async = true;
-		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-		f.parentNode.insertBefore(j, f);
-	})(window, document, 'script', 'dataLayer', 'GTM-KH6DHDG');
-</script> -->
+<script type="text/partytown" content={GAPageView}></script>
