--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -1,6 +1,6 @@
 ---
 import { AstroSeo } from '@astrolib/seo';
-import { analytics, GAPageView, GAEvent } from '@core/Firebase';
+import { GoogleAnalytics }  from '@astrolib/analytics';
 
 import { SITE } from '@/config.mjs';
 
@@ -52,4 +52,6 @@ const {
 <!-- Google Site Verification -->
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
-<script type="text/partytown" content={GAPageView}></script>
+<!-- <script type="text/partytown" content={GAPageView}></script> -->
+
+<GoogleAnalytics id={SITE.googleAnalyticsStreamId} partytown={true}/>
