--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -63,6 +63,6 @@ const {
 		j.async = true;
 		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
 		f.parentNode.insertBefore(j, f);
-	})(window, document, 'script', 'dataLayer', SITE.googleTagId);
+	})(window, document, 'script', 'dataLayer', 'GTM-KH6DHDG');
 </script>
 <!-- End Google Tag Manager -->
