--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -52,4 +52,17 @@ const {
 <!-- Google Site Verification -->
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
-<script type="text/partytown" content={GAPageView}></script>
+<!-- Google Tag Manager -->
+<script client:load>
+	(function (w, d, s, l, i) {
+		w[l] = w[l] || [];
+		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+		var f = d.getElementsByTagName(s)[0],
+			j = d.createElement(s),
+			dl = l != 'dataLayer' ? '&l=' + l : '';
+		j.async = true;
+		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+		f.parentNode.insertBefore(j, f);
+	})(window, document, 'script', 'dataLayer', 'GTM-KH6DHDG');
+</script>
+<!-- End Google Tag Manager -->
