--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -1,6 +1,6 @@
 ---
 import { AstroSeo } from '@astrolib/seo';
-import { GoogleAnalytics } from '@astrolib/analytics';
+import { analytics, GAPageView, GAEvent } from '@core/Firebase';
 
 import { SITE } from '@/config.mjs';
 
