--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -49,7 +49,7 @@ import { Icon } from 'astro-icon';
 							href="https://github.com/Space-Wizard-Studios/sw-site/"
 							class="text-gray-500 hover:text-white"
 						>
-							<Icon name="ic:baseline-discord" class="w-6 h-6" />
+							<Icon name="ic:baseline-github" class="w-6 h-6" />
 							<span class="sr-only">GitHub account</span>
 						</a>
 					</div>
