--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -29,8 +29,8 @@ const { meta, hero, carousel, partners } = Astro.props as Props;
 				<slot />
 			</article>
 
-			{carousel && <ProjectCarousel images={carousel} class="px-8" />}
-			{partners && <ProjectPartners partners={partners} class="px-8" />}
+			{carousel?.length && <ProjectCarousel images={carousel} class="px-8" />}
+			{partners?.length && <ProjectPartners partners={partners} class="px-8" />}
 		</div>
 	</div>
 	<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
