--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -5,13 +5,14 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 ---
 
 <header
-	class="sticky top-0 z-40 w-full flex-none mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary dark:bg-sw-primary"
+	class="sticky flex top-0 z-40 h-28 w-full items-center mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary/95 dark:bg-sw-primary/95"
 >
-	<div class="py-6 px-6 mx-auto w-full md:flex md:justify-between max-w-6xl">
-		<nav class="flex justify-between">
+	<div class="flex mx-auto w-full justify-between max-w-6xl">
+		<nav class="flex flex-wrap mx-auto w-full justify-between">
 			<a class="flex items-center w-48 spacewiz__fill" href="/">
-				<SiteLogo client:load/>
+				<SiteLogo client:load />
 			</a>
+			<!-- MOBILE -->
 			<div class="flex items-center md:hidden">
 				<ButtonToggleTheme client:load />
 				<ButtonToggleMenu />
@@ -23,23 +24,53 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 			aria-label="Main navigation"
 			id="menu"
 		>
-			<!-- TODO <ul class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center collapse w-full md:w-auto collapsed text-xl md:text-base">
-				<li>
-					<a
-						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href="#">Início</a
-					>
-				</li>
-				<li>
-					<a
-						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href="#">Projetos</a
-					>
-				</li>
-			</ul> -->
-			<div class="md:self-center flex items-center mb-4 md:mb-0">
+			<!-- MOBILE -->
+			<div class="block position-absolute w-full md:hidden md:w-auto">
+				<ul
+					class="flex flex-col p-4 mt-4 border rounded-lg md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-sw-secondary-500 dark:bg-sw-primary-800"
+				>
+					<li>
+						<a
+							href="/"
+							class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+							aria-current="page">Início</a
+						>
+					</li>
+					<li>
+						<a
+							href="/projects"
+							class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+							>Projetos</a
+						>
+					</li>
+				</ul>
+			</div>
+
+			<!-- DESKTOP -->
+			<div class="hidden w-full md:block md:w-auto mx-4">
+				<ul
+					class="flex flex-col p-3 rounded-lg md:flex-row md:space-x-8 mt-4 md:mt-0 md:text-sm md:font-medium md:border-0 bg-sw-secondary-500 dark:bg-sw-primary-800"
+				>
+					<li>
+						<a
+							href="/"
+							class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+							aria-current="page">Início</a
+						>
+					</li>
+					<li>
+						<a
+							href="/projects"
+							class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+							>Projetos</a
+						>
+					</li>
+				</ul>
+			</div>
+
+			<div class="md:self-center flex items-center">
 				<div class="hidden items-center md:flex">
-					<ButtonToggleTheme client:load />
+					<ButtonToggleTheme client:load/>
 				</div>
 			</div>
 		</nav>
