--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,9 +1,24 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
+
+import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
+
+import type { MetaSEO } from 'types/metaseo';
+
+type Props = {
+	meta?: MetaSEO;
+};
+
+const { meta } = Astro.props as Props;
 ---
 
-<Layout>
-	<main>
-		<slot />
-	</main>
+<Layout {meta}>
+	<div class="min-h-screen spacewiz__container">
+		<div class="pb-8 h-full bg-sw-secondary-200 dark:bg-sw-primary-700">
+			<main class="px-8">
+				<slot />
+			</main>
+		</div>
+	</div>
+	<DividerArrowDown class="fill-sw-secondary-200 dark:fill-sw-primary-700 bg-sw-coal-500" />
 </Layout>
