padronização nomes jornada

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -7,8 +7,8 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 <header
 	class="sticky flex top-0 z-40 h-28 w-full items-center mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary/95 dark:bg-sw-primary/95"
 >
-	<div class="flex mx-auto w-full justify-between max-w-6xl">
-		<nav class="flex flex-wrap mx-auto w-full justify-between">
+	<div class="flex mx-8 w-full items-center justify-between max-w-6xl">
+		<nav class="flex w-full justify-between">
 			<a class="flex items-center w-48 spacewiz__fill" href="/">
 				<SiteLogo client:load />
 			</a>
