--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -4,44 +4,65 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 import ButtonToggleTheme from '@core/ButtonToggleTheme';
 ---
 
-<header
-	class="sticky top-0 z-40 w-full flex-none mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary dark:bg-sw-primary"
->
-	<div class="py-6 px-6 mx-auto w-full md:flex md:justify-between max-w-6xl">
-		<nav class="flex justify-between">
-			<a class="flex items-center w-48 spacewiz__fill" href="/">
-				<SiteLogo client:load/>
+<header class="sticky top-0 z-40 w-full md:backdrop-blur-sm shadow-md bg-sw-secondary/95 dark:bg-sw-primary/95">
+	<nav
+		class="flex w-full h-16 lg:h-28 justify-center items-center"
+	>
+		<div class="flex w-full spacewiz__container items-center justify-between ">
+			<a class="w-48 spacewiz__fill" href="/">
+				<SiteLogo client:load />
 			</a>
-			<div class="flex items-center md:hidden">
+
+			<!-- MOBILE -->
+			<div class="flex flex-grow justify-end md:hidden gap-8">
 				<ButtonToggleTheme client:load />
 				<ButtonToggleMenu />
 			</div>
-		</nav>
 
-		<nav
-			class="items-center w-full md:w-auto md:flex text-sw-primary dark:text-sw-secondary md:h-auto"
-			aria-label="Main navigation"
-			id="menu"
-		>
-			<!-- TODO <ul class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center collapse w-full md:w-auto collapsed text-xl md:text-base">
-				<li>
-					<a
-						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href="#">Início</a
-					>
-				</li>
-				<li>
-					<a
-						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
-						href="#">Projetos</a
-					>
-				</li>
-			</ul> -->
-			<div class="md:self-center flex items-center mb-4 md:mb-0">
-				<div class="hidden items-center md:flex">
+			<!-- DESKTOP -->
+			<div class="hidden md:flex md:flex-grow justify-end">
+				<ul
+					class="flex flex-col p-3 mx-4 rounded-lg md:flex-row md:space-x-8 mt-4 md:mt-0 md:text-sm md:font-medium md:border-0 bg-sw-secondary-500 dark:bg-sw-primary-800"
+				>
+					<li>
+						<a
+							href="/"
+							class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+							aria-current="page">Início</a
+						>
+					</li>
+					<li>
+						<a
+							href="/projects"
+							class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+							>Projetos</a
+						>
+					</li>
+				</ul>
+
+				<div class="items-center md:flex">
 					<ButtonToggleTheme client:load />
 				</div>
 			</div>
-		</nav>
-	</div>
+		</div>
+	</nav>
+
+	<nav class="hidden w-full spacewiz__container text-sw-primary dark:text-sw-secondary" id="menu">
+		<ul class="flex flex-col p-4 mt-4">
+			<li>
+				<a
+					href="/"
+					class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+					aria-current="page">Início</a
+				>
+			</li>
+			<li>
+				<a
+					href="/projects"
+					class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+					>Projetos</a
+				>
+			</li>
+		</ul>
+	</nav>
 </header>
