remove client load

--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -68,7 +68,7 @@ import { Icon } from 'astro-icon';
 			</div>
 			<div class="flex mt-4 justify-center md:justify-end w-full">
 				<div class="w-12 h-12 text-white">
-					<SiteIcon client:load />
+					<SiteIcon client:visible />
 				</div>
 			</div>
 		</div>
