--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -10,12 +10,12 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 	>
 		<div class="flex w-full spacewiz__container items-center justify-between ">
 			<a class="w-48 spacewiz__fill" href="/">
-				<SiteLogo client:load />
+				<SiteLogo client:idle />
 			</a>
 
 			<!-- MOBILE -->
 			<div class="flex flex-grow justify-end md:hidden gap-8">
-				<ButtonToggleTheme client:load />
+				<ButtonToggleTheme client:idle />
 				<ButtonToggleMenu />
 			</div>
 
@@ -41,7 +41,7 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 				</ul>
 
 				<div class="items-center md:flex">
-					<ButtonToggleTheme client:load />
+					<ButtonToggleTheme client:idle />
 				</div>
 			</div>
 		</div>
