--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -9,6 +9,6 @@ import HeroCanvas from '@atoms/HeroCanvas';
 	<img class="hidden md:block w-screen cover aspect-ratio-16/9" src="/images/hero_md.webp" alt="" />
 
 	<!-- <figure class="absolute top-0 right-0 w-full h-full"> -->
-	<!-- <HeroCanvas client:load/> -->
+	<!-- <HeroCanvas client:idle/> -->
 	<!-- </figure> -->
 </section>
