--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -20,7 +20,7 @@ const { ...props } = Astro.props as Props;
 
 	<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 text-justify my-16">
 		<TeamCard
-			client:load
+			client:visible
 			name="Alexandre Barbosa"
 			roles={['Generalista de Áudio']}
 			skills={['Composição', 'Prod. Musical', 'SFX']}
@@ -33,7 +33,7 @@ const { ...props } = Astro.props as Props;
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="Danilo Nobre"
 			roles={['Generalista 3D']}
 			skills={['Modelagem 3D', 'Texturização', 'Rigging', 'Animação']}
@@ -44,7 +44,7 @@ const { ...props } = Astro.props as Props;
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="Gustavo Arantes"
 			roles={['Generalista 2D']}
 			skills={['Concept Art', 'Ilustração']}
@@ -56,7 +56,7 @@ const { ...props } = Astro.props as Props;
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="Rhayane Miranda"
 			roles={['Social Media']}
 			skills={['Criação', 'Analytics']}
@@ -67,7 +67,7 @@ const { ...props } = Astro.props as Props;
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="William Magalhães"
 			roles={['Programador Full Stack']}
 			skills={['Backend', 'Frontend', 'Tech Artist']}
