only nice imports

--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -53,7 +53,7 @@ const {
 <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />
 
 <!-- Google Tag Manager -->
-<script client:load>
+<script client:idle>
 	(function (w, d, s, l, i) {
 		w[l] = w[l] || [];
 		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
