--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,4 +1,6 @@
 ---
+import '@styles/toggle.scss';
+
 import { SiteLogo } from '@atoms/SiteLogo';
 import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 import ButtonToggleTheme from '@core/ButtonToggleTheme';
