--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,9 @@
 ---
 import '@styles/style.scss';
+import '@styles/focus.scss';
+import '@styles/scrollbar.scss';
+import '@styles/spacewiz.scss';
+import '@styles/text.scss';
 
 import MetaTags from '@core/MetaTags.astro';
 
