--- a/src/layouts/PoliciesPageLayout.astro
+++ b/src/layouts/PoliciesPageLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '@styles/policy.scss';
+
 import Layout from '@layouts/BaseLayout.astro';
 import DividerArrowDown from '@atoms/dividers/DividerArrowDown.astro';
 ---
