--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '@styles/project.scss';
+
 import Layout from '@layouts/BaseLayout.astro';
 
 import ProjectHero from '@widgets/projects/ProjectHero.astro';
