--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -14,13 +14,16 @@ const { ...props } = Astro.props as Props;
 			<span>Nossos serviços</span>
 		</h2>
 		<h3 class="mb-12">
-			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Um resumo do que desenvolvemos</span>
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo"
+				>Um resumo do que desenvolvemos</span
+			>
 		</h3>
 	</header>
 
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
 		<ProductCard
 			client:visible
+			index={0}
 			iconSrc="./models/products/product_model-games_placeholder.gltf"
 			iconColor={0x005ce6}
 			tooltip
@@ -34,7 +37,12 @@ const { ...props } = Astro.props as Props;
 				Nossa tripulação conta com profissionais de backgrounds nas mais diversas áreas de desenvolvimento.
 			</span>
 		</ProductCard>
-		<ProductCard client:visible iconSrc="./models/products/product_model-web_placeholder.gltf" iconColor={0xff62f2}>
+		<ProductCard
+			index={1}
+			client:visible
+			iconSrc="./models/products/product_model-web_placeholder.gltf"
+			iconColor={0xff62f2}
+		>
 			<span slot="title">WebDev</span>
 			<span slot="subtitle">e gamificação</span>
 			<span slot="description">
@@ -45,7 +53,12 @@ const { ...props } = Astro.props as Props;
 				aplicação web em um jogo!
 			</span>
 		</ProductCard>
-		<ProductCard client:visible iconSrc="./models/products/product_model-apps_placeholder.gltf" iconColor={0x005ce6}>
+		<ProductCard
+			index={2}
+			client:visible
+			iconSrc="./models/products/product_model-apps_placeholder.gltf"
+			iconColor={0x005ce6}
+		>
 			<span slot="title">Apps</span>
 			<span slot="subtitle">e soluções interativas</span>
 			<span slot="description">
@@ -55,7 +68,12 @@ const { ...props } = Astro.props as Props;
 				Acreditamos que a melhor maneira de conectar pessoas à ideias é através de uma incrível experiência do usuário.
 			</span>
 		</ProductCard>
-		<ProductCard client:visible iconSrc="./models/products/product_model-music_placeholder.gltf" iconColor={0xff62f2}>
+		<ProductCard
+			index={3}
+			client:visible
+			iconSrc="./models/products/product_model-music_placeholder.gltf"
+			iconColor={0xff62f2}
+		>
 			<span slot="title">Sonoplastia</span>
 			<span slot="subtitle">áudio e música</span>
 			<span slot="description">
