--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -29,7 +29,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
 				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ/',
 			}}
-			photo="/images/team/alex_profile.webp"
+			photoSrc="/images/team/alex_profile.webp"
 		/>
 
 		<TeamCard
@@ -40,7 +40,7 @@ const { ...props } = Astro.props as Props;
 			links={{
 				linkedin: 'https://www.linkedin.com/in/danilo-nobre/',
 			}}
-			photo="/images/team/danilo_profile.webp"
+			photoSrc="/images/team/danilo_profile.webp"
 		/>
 
 		<TeamCard
@@ -52,7 +52,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/gustav-arantes/',
 				portfolio: 'https://gustavarantes.myportfolio.com/',
 			}}
-			photo="/images/team/gustavo_profile.webp"
+			photoSrc="/images/team/gustavo_profile.webp"
 		/>
 
 		<TeamCard
@@ -63,7 +63,7 @@ const { ...props } = Astro.props as Props;
 			links={{
 				linkedin: 'https://www.linkedin.com/in/rhayane-miranda/',
 			}}
-			photo="/images/team/rhayane_profile.webp"
+			photoSrc="/images/team/rhayane_profile.webp"
 		/>
 
 		<TeamCard
@@ -75,7 +75,7 @@ const { ...props } = Astro.props as Props;
 				github: 'https://github.com/wbmagalhaes/',
 				linkedin: 'https://www.linkedin.com/in/william-bernardes-magalhaes/',
 			}}
-			photo="/images/team/william_profile.webp"
+			photoSrc="/images/team/william_profile.webp"
 		/>
 	</section>
 </div>
