--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -20,7 +20,7 @@ const { ...props } = Astro.props as Props;
 
 	<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 text-justify my-16">
 		<TeamCard
-			client:load
+			client:visible
 			name="Alexandre Barbosa"
 			roles={['Generalista de Áudio']}
 			skills={['Composição', 'Prod. Musical', 'SFX']}
@@ -29,22 +29,22 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
 				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ/',
 			}}
-			photo="/images/team/alex_profile.webp"
+			photoSrc="/images/team/alex_profile.webp"
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="Danilo Nobre"
 			roles={['Generalista 3D']}
 			skills={['Modelagem 3D', 'Texturização', 'Rigging', 'Animação']}
 			links={{
 				linkedin: 'https://www.linkedin.com/in/danilo-nobre/',
 			}}
-			photo="/images/team/danilo_profile.webp"
+			photoSrc="/images/team/danilo_profile.webp"
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="Gustavo Arantes"
 			roles={['Generalista 2D']}
 			skills={['Concept Art', 'Ilustração']}
@@ -52,22 +52,22 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/gustav-arantes/',
 				portfolio: 'https://gustavarantes.myportfolio.com/',
 			}}
-			photo="/images/team/gustavo_profile.webp"
+			photoSrc="/images/team/gustavo_profile.webp"
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="Rhayane Miranda"
 			roles={['Social Media']}
 			skills={['Criação', 'Analytics']}
 			links={{
 				linkedin: 'https://www.linkedin.com/in/rhayane-miranda/',
 			}}
-			photo="/images/team/rhayane_profile.webp"
+			photoSrc="/images/team/rhayane_profile.webp"
 		/>
 
 		<TeamCard
-			client:load
+			client:visible
 			name="William Magalhães"
 			roles={['Programador Full Stack']}
 			skills={['Backend', 'Frontend', 'Tech Artist']}
@@ -75,7 +75,7 @@ const { ...props } = Astro.props as Props;
 				github: 'https://github.com/wbmagalhaes/',
 				linkedin: 'https://www.linkedin.com/in/william-bernardes-magalhaes/',
 			}}
-			photo="/images/team/william_profile.webp"
+			photoSrc="/images/team/william_profile.webp"
 		/>
 	</section>
 </div>
