--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,8 @@
 ---
+import '@styles/spacewiz.scss';
+import '@styles/focus.scss';
+import '@styles/scrollbar.scss';
+import '@styles/text.scss';
 import '@styles/style.scss';
 
 import MetaTags from '@core/MetaTags.astro';
