--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -42,15 +42,22 @@ import { Icon } from 'astro-icon';
 					<p class="mb-3 text-sm font-semibold uppercase text-white">Redes Sociais</p>
 					<div class="flex gap-2">
 						<a href="https://www.instagram.com/spacewiz.dev/" class="text-gray-500 hover:text-white">
-							<Icon name="mdi:instagram" class="w-6 h-6" />
-							<span class="sr-only">Instagram page</span>
+							<Icon name="simple-icons:instagram" class="w-6 h-6" />
+							<span class="sr-only">Instagram</span>
+						</a>
+						<a
+							href="https://linkedin.com/company/space-wizard-studios"
+							class="text-gray-500 hover:text-white"
+						>
+							<Icon name="simple-icons:linkedin" class="w-6 h-6" />
+							<span class="sr-only">Linkedin</span>
 						</a>
 						<a
 							href="https://github.com/Space-Wizard-Studios/sw-site/"
 							class="text-gray-500 hover:text-white"
 						>
-							<Icon name="mdi:github" class="w-6 h-6" />
-							<span class="sr-only">GitHub account</span>
+							<Icon name="simple-icons:github" class="w-6 h-6" />
+							<span class="sr-only">GitHub</span>
 						</a>
 					</div>
 				</div>
