--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -33,6 +33,6 @@ const meta: MetaSEO = {
 };
 ---
 
-<Layout {meta} hero={page.frontmatter.hero} carousel={page.frontmatter.carousel} partners={page.frontmatter.partners}>
+<Layout {meta} heroSrc={page.frontmatter.heroSrc} heroTitle={page.frontmatter.heroTitle} heroAltText={page.frontmatter.heroAltText} carousel={page.frontmatter.carousel} partners={page.frontmatter.partners}>
 	<page.Content />
 </Layout>
