--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -15,18 +15,20 @@ import type { MetaSEO } from 'types/metaseo';
 
 type Props = {
 	meta?: MetaSEO;
-	hero?: string;
+	heroSrc?: string;
+	heroTitle?: string;
+	heroAltText?: string;
 	carousel?: ImageProps[];
 	partners?: PartnersProps[];
 };
 
-const { meta, hero, carousel, partners } = Astro.props as Props;
+const { meta, heroSrc, heroTitle, heroAltText, carousel, partners } = Astro.props as Props;
 ---
 
 <Layout {meta}>
 	<div class="min-h-screen spacewiz__container project">
 		<div class="pb-8 h-full bg-sw-secondary-200 dark:bg-sw-primary-700">
-			{hero && <ProjectHero src={hero} />}
+			{heroSrc && <ProjectHero heroSrc={heroSrc} heroTitle={heroTitle} heroAltText={heroAltText} />}
 			<article class="px-8">
 				<slot />
 			</article>
