--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -39,8 +39,11 @@ const meta: MetaSEO = {
 			projects.map((page) => (
 				<div class="flex relative min-h-[16rem]">
 					<div class="grid grid-cols-1 w-full h-full overflow-hidden content-between shadow-md hover:shadow-sw-navy/25 dark:hover:shadow-sw-flamingo-700/10 transition-shadow duration-500 bg-gradient-to-b rounded-2xl from-sw-secondary-200 to-sw-secondary-300 dark:from-sw-primary-600/75 dark:to-sw-primary-600 text-sw-primary dark:text-sw-secondary">
-						<img src={page.frontmatter.hero} />
-
+						<img
+							src={page.frontmatter.heroSrc}
+							title={page.frontmatter.heroTitle}
+							alt={page.frontmatter.heroAltText}
+						/>
 						<div class="p-4">
 							<h2 class="font-bold text-base">
 								<a href={'/projects/' + page.slug}>{page.frontmatter.title}</a>
