--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -11,7 +11,8 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 		class="flex w-full h-16 lg:h-28 justify-center items-center"
 	>
 		<div class="flex w-full spacewiz__container items-center justify-between ">
-			<a class="w-48 spacewiz__fill" href="/">
+			<a class="w-48 spacewiz__fill" href="/" title="Space Wizard Studios">
+				<span class="sr-only">Space Wizard Studios</span>
 				<SiteLogo client:idle />
 			</a>
 
