--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -6,8 +6,8 @@ import HeroCanvas from '@atoms/HeroCanvas';
 <section class="min-h-screen">
 	<div class="relative">
 		<DividerWave class="spacewiz__fill--reversed bottom-0" />
-		<img width="1200" class="block md:hidden w-screen cover aspect-ratio-16/9" src="/images/hero_sm.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
-		<img class="hidden md:block w-screen cover aspect-ratio-16/9" src="/images/hero_md.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
+		<img width="1920" class="block md:hidden w-screen cover aspect-ratio-16/9" src="/images/hero_sm.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
+		<img width="1080" class="hidden md:block w-screen cover aspect-ratio-[9/16]" src="/images/hero_md.webp" title="Space Wizard Studios banner" alt="Space Wizard Studios banner of our female mascot floating in space dressed in her astronaut suit and wearing a large wizard hat. She is looking at the stars with a big smile. Behind her is her spaceship." />
 	</div>
 
 	<!-- <figure class="absolute top-0 right-0 w-full h-full"> -->
