corrigir cor do container do layout das páginas
Fixes #68

--- a/src/components/widgets/Error404.astro
+++ b/src/components/widgets/Error404.astro
@@ -12,7 +12,7 @@
 			<a
 				rel="noopener noreferrer"
 				href="/"
-				class="inline-flex items-center p-3 rounded-md bg-sw-navy dark:bg-sw-flamingo ml-4"
+				class="inline-flex items-center p-3 rounded-md bg-sw-navy dark:bg-sw-flamingo ml-4 text-sw-secondary dark:text-sw-primary"
 			>
 				<svg
 					class="mr-2 w-6 h-6"
