corrigir cores da navbar de acordo com o padrão da spacewiz Fixes #62

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -30,14 +30,14 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 					<li>
 						<a
 							href="/"
-							class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+							class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
 							aria-current="page">Início</a
 						>
 					</li>
 					<li>
 						<a
 							href="/projects"
-							class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+							class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
 							>Projetos</a
 						>
 					</li>
@@ -50,19 +50,19 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 		</div>
 	</nav>
 
-	<nav class="hidden w-full spacewiz__container text-sw-primary dark:text-sw-secondary" id="menu">
-		<ul class="flex flex-col p-4 mt-4">
+	<nav class="hidden w-full spacewiz__container" id="menu">
+		<ul class="flex flex-col p-4">
 			<li>
 				<a
 					href="/"
-					class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
+					class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
 					aria-current="page">Início</a
 				>
 			</li>
 			<li>
 				<a
 					href="/projects"
-					class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+					class="block p-3 md:p-0 rounded text-sw-coal-400 hover:text-sw-navy"
 					>Projetos</a
 				>
 			</li>
